--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -3,109 +3,112 @@
 @import "./default/index.scss";
 
 :root {
-	--border-radius: 20px;
-	--elements-padding: 18px;
-	--page-padding: 36px;
+  --border-radius: 20px;
+  --elements-padding: 18px;
+  --page-padding: 36px;
 
-	// GAP
-	--gap-sm: 9px;
-	--gap-md: 18px;
-	--gap-lg: 36px;
+  // GAP
+  --gap-sm: 9px;
+  --gap-md: 18px;
+  --gap-lg: 36px;
 
-	// FONT WEIGHTS
-	--fw-regular: 400;
-	--fw-medium: 500;
-	--fw-bold: 700;
+  // FONT WEIGHTS
+  --fw-regular: 400;
+  --fw-medium: 500;
+  --fw-bold: 700;
 
-	// FONT SIZES
-	--fs-sm: 12px;
-	--fs-md: 16px;
-	--fs-lg: 24px;
+  // FONT SIZES
+  --fs-sm: 12px;
+  --fs-md: 16px;
+  --fs-lg: 20px;
 
-	// COLORI
-	--accent: #f9ff00; //cta, timer, badge, risultati
-	--primary: #7f5af0; //menu, background
-	--secondary: #2cb67d; //badge e risultati
-	--tertiary: #ff6091; //badge e risultati
+  // COLORI
+  --accent: #f9dc5c; //cta, timer, badge, risultati
+  --primary: #373c6d; //menu, background
+  --secondary: #92bcea; //badge e risultati
+  --tertiary: #dd5da6; //badge e risultati
+  --fill: #444b88; //div fill
+  --error: #d7263d; //error
 
-	// COLORI NEUTRI
-	--white: #fffffe; //titoli (sfondo popup?)
-	--light: #d3d3d3; //paragrafi, label e button CTA B (es "accedi con google")
-	--dark: #362763; //background e button CTA C (es "avanti")
+  // COLORI NEUTRI
+  --white: #fffffe; //titoli (sfondo popup?)
+  --light: #bbd5ed; //paragrafi, label e button CTA B (es "accedi con google")
+  --dark: #2a3164; //background e button CTA C (es "avanti")
 
-	// MODIFICATE
-	--background: linear-gradient(to bottom, var(--dark), var(--primary));
-	--elements-bg: rgba(211, 211, 211, 0.2);
-	--cards-bg: rgba(211, 211, 211, 1);
-	// --correct-bg: rgba(139, 186, 166, 0.2);
-	// --average-bg: rgba(251, 255, 0, 0.2);
-	// --incorrect-bg: rgba(255, 96, 144, 0.2);
-	--correct-bg: rgb(174, 202, 191);
-	--average-bg: rgb(202, 204, 180);
-	--incorrect-bg: rgb(201, 177, 184);
-	--lightGrey: rgba(211, 211, 211, 0.4); //hr
+  // MODIFICATE
+  --background: linear-gradient(to right, #373c6d 70%, #373c6d 99%);
 
-	// HOME
-	--lighter: #f5f5f5; //home bg
-	--medium: #72757e; //home p
-	// cards
-	--featureCard1: rgba(245, 241, 23, 0.4);
-	--featureCard2: rgb(255, 96, 145, 0.4);
-	--featureCard3: rgb(44, 182, 125, 0.4);
-	--interviewerCard: rgba(127, 90, 240, 0.5);
+  --elements-bg: rgba(211, 211, 211, 0.2);
+  --cards-bg: linear-gradient(45deg, rgba(68, 75, 136, 1) 50%, rgba(82, 90, 163, 1) 78%, rgba(106, 113, 180, 1) 100%);
+  // --correct-bg: rgba(139, 186, 166, 0.2);
+  // --average-bg: rgba(251, 255, 0, 0.2);
+  // --incorrect-bg: rgba(255, 96, 144, 0.2);
+  --correct-bg: rgb(174, 202, 191);
+  --average-bg: rgb(202, 204, 180);
+  --incorrect-bg: rgb(201, 177, 184);
+  --lightGrey: rgba(211, 211, 211, 0.4); //hr
+
+  // HOME
+  --lighter: #f5f5f5; //home bg
+  --medium: #72757e; //home p
+  // cards
+  --featureCard1: rgba(245, 241, 23, 0.4);
+  --featureCard2: rgb(255, 96, 145, 0.4);
+  --featureCard3: rgb(44, 182, 125, 0.4);
+  --interviewerCard: rgba(127, 90, 240, 0.5);
 }
 
 * {
-	padding: 0;
-	margin: 0;
-	box-sizing: border-box;
-	font-family: "Hanken Grotesk", sans-serif;
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  font-family: "Hanken Grotesk", sans-serif;
 }
 
 html,
 body {
-	max-width: 100vw;
-	overflow-x: hidden;
-	background: var(--background);
+  max-width: 100vw;
+  overflow-x: hidden;
+  background: var(--background);
 
-	scroll-behavior: smooth;
-	scroll-padding-top: calc(100px + var(--page-padding));
+  scroll-behavior: smooth;
+  scroll-padding-top: calc(100px + var(--page-padding));
 
-	a {
-		color: inherit;
-		text-decoration: none;
-	}
+  a {
+    color: inherit;
+    text-decoration: none;
+  }
 
-	button {
-		box-shadow: none;
-		border: none;
-	}
+  button {
+    box-shadow: none;
+    border: none;
+  }
 
-	input,
-	select,
-	textarea {
-		border: none;
-	}
+  input,
+  select,
+  textarea {
+    border: none;
+  }
 
-	::placeholder {
-		color: var(--dark);
-	}
+  ::placeholder {
+    color: var(--dark);
+  }
 
-	ul {
-		list-style: none;
-	}
+  ul {
+    list-style: none;
+  }
 
-	hr {
-		border-top: 1px solid var(--lightGrey);
-	}
+  hr {
+    border-top: 1px solid var(--lightGrey);
+  }
 }
 
 body {
-	footer {
-		display: none;
+  footer {
+    display: none;
 
-		@media (min-width: 1025px) {
-			display: block;
-		}
-	}
+    @media (min-width: 1025px) {
+      display: block;
+    }
+  }
 }
