style: fix some labels and media query on Login Page

--- a/src/components/Atoms/Label/Label.module.scss
+++ b/src/components/Atoms/Label/Label.module.scss
@@ -1,6 +1,6 @@
 .label {
-  color: var(--light);
+  color: var(--white);
   font-weight: var(--fw-bold);
   font-size: var(--fs-md);
-  padding-left: var(--element-padding);
+  padding-left: var(--elements-padding);
 }
