--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -28,7 +28,7 @@
   --secondary: #3e9fff; //badge e risultati
   --tertiary: #d161ba; //badge e risultati
   --fill: #444b88; //div fill
-  --error: #d7263d; //error
+  --error: #c01e61; //error
 
   // COLORI NEUTRI
   --white: #fffffe; //titoli (sfondo popup?)
