Feat: input validation and style of Login and Register pages

--- a/src/components/Atoms/Select/Select.module.scss
+++ b/src/components/Atoms/Select/Select.module.scss
@@ -1,8 +1,8 @@
 .select {
-	@include base-element;
-	cursor: pointer;
+  @include base-element;
+  cursor: pointer;
 
-	option {
-		color: var(--dark);
-	}
+  option {
+    color: var(--white);
+  }
 }
