--- a/src/components/Molecules/QuizCard/QuizCard.module.scss
+++ b/src/components/Molecules/QuizCard/QuizCard.module.scss
@@ -9,7 +9,8 @@
   transition: transform 0.3s ease;
 
   @media (min-width: 767px) {
-    min-width: 360px;
+    min-width: 300px;
+    max-width: 330px;
   }
 
   // border: 1px solid var(--tertiary);
