--- a/src/components/Organism/ChooseInterviewer/ChooseInterviewer.module.scss
+++ b/src/components/Organism/ChooseInterviewer/ChooseInterviewer.module.scss
@@ -1,84 +1,103 @@
 .main {
-	@include main;
+  @include main;
 
-	@media (min-width: 1025px) {
-		align-items: stretch;
-	}
+  @media (min-width: 767px) {
+    align-items: stretch;
+    // overflow: visible;
+  }
 
-	.container {
-		@include flex-column(var(--gap-lg));
+  .container {
+    @include flex-column(var(--gap-sm));
+    justify-content: center;
+    @media (min-width: 1024px) {
+      padding-top: 100px;
+      align-items: center;
+    }
 
-		.header {
-			@include header;
-		}
+    .header {
+      @include header;
+    }
 
-		.interviewerForm {
-			@include form;
-			@include flex-column(var(--gap-md));
-			flex-grow: 1;
+    .interviewerForm {
+      @include form;
+      @include flex-column(var(--gap-md));
+      flex-grow: 1;
 
-			@media (min-width: 1025px) {
-				height: 100%;
-				justify-content: space-between;
-				align-items: center;
-			}
+      @media (min-width: 767px) {
+        height: 100%;
+        justify-content: space-between;
+        align-items: center;
+      }
 
-			.avatarGrid {
-				display: grid;
-				grid-gap: var(--gap-md);
-				grid-template-columns: repeat(2, 1fr);
-				flex-grow: 1;
+      .avatarGrid {
+        display: grid;
+        grid-gap: var(--gap-md);
+        grid-template-columns: repeat(2, 1fr);
+        flex-grow: 1;
+        justify-content: center;
 
-				@media (min-width: 1025px) {
-					grid-template-columns: repeat(4, 1fr);
-					grid-gap: var(--gap-lg);
-				}
+        @media (min-width: 765px) {
+          grid-template-columns: repeat(3, 1fr);
+          grid-gap: var(--gap-md);
+        }
 
-				.label {
-					@include base-element;
+        .label {
+          @include base-element;
+          @include effect-shadow;
+          @media (min-width: 768px) {
+            width: 220px;
+          }
+          @include flex-column(var(--gap-sm));
+          justify-content: space-between;
+          align-items: flex-start;
+          cursor: pointer;
+          transition: all 0.35s ease;
+          color: var(--white);
+          background: var(--accent);
 
-					@include flex-column(var(--gap-sm));
-					justify-content: space-between;
-					align-items: flex-start;
-					cursor: pointer;
-					transition: all 0.35s ease;
-					color: var(--light);
+          & > div:first-child {
+            @include flex-column(var(--gap-sm));
 
-					& > div:first-child {
-						@include flex-column(var(--gap-sm));
+            .avatar {
+              //   border-bottom: 1px solid var(--lightGrey);
+              height: max-content;
+              background-color: var(--accent);
+              border-radius: 50%;
+              border: 4px solid var(--tertiary);
 
-						.avatar {
-							border-bottom: 1px solid var(--lightGrey);
-							height: max-content;
+              .avatarImg {
+                display: block;
+                width: 100%;
+                height: 100%;
+                object-fit: contain;
+                border-radius: 50%;
+              }
+            }
 
-							.avatarImg {
-								display: block;
-								width: 100%;
-								height: 100%;
-								object-fit: contain;
-							}
-						}
+            .avatarName,
+            .avatarBio {
+              width: 100%;
+              font-size: var(--fs-md);
+            }
+          }
 
-						.avatarName,
-						.avatarBio {
-							width: 100%;
-							font-size: var(--fs-md);
-						}
-					}
+          &:active,
+          &:focus,
+          &:hover,
+          &.selected {
+            background-color: var(--light);
+            color: var(--dark);
+          }
 
-					&:active,
-					&:focus,
-					&:hover,
-					&.selected {
-						background-color: var(--light);
-						color: var(--dark);
-					}
+          &.selected {
+            border: 3px solid var(--tertiary);
+          }
 
-					.radio {
-						display: none;
-					}
-				}
-			}
-		}
-	}
+          .radio {
+            display: none;
+          }
+        }
+      }
+    }
+  }
 }
