--- a/src/pages/storic-profile/storic-profile.module.scss
+++ b/src/pages/storic-profile/storic-profile.module.scss
@@ -1,6 +1,7 @@
 .main {
   @include main;
-  @media (min-height: 767px) {
+  justify-content: flex-start;
+  @media (min-height: 600px) {
     overflow: visible; // Evita lo scroll
   }
   @include flex-column(var(--gap-sm));
@@ -9,6 +10,10 @@
   .container {
     @include flex-column(var(--gap-lg));
     padding: 0;
+    @media (min-width: 1025px) {
+      padding-top: 60px;
+    }
+
     .recentTests {
       color: var(--white);
       padding-bottom: var(--gap-sm);
@@ -18,6 +23,7 @@
       padding: 8px 16px;
       display: inline-block;
       margin-bottom: 12px;
+      margin-left: 0;
       @media (min-width: 767px) {
         gap: 64px;
       }
@@ -30,6 +36,8 @@
 
   .header {
     @include header;
+    @media (min-width: 767px) {
+    }
   }
 
   color: var(--light);
@@ -81,8 +89,13 @@
       display: flex;
       flex-direction: column;
       align-items: baseline;
-      justify-content: space-around;
-      margin-left: 36px;
+      flex-wrap: wrap;
+    }
+    @media (min-width: 800px) {
+      padding-left: 26px;
+    }
+    @media (min-width: 1024px) {
+      padding-left: 56px;
     }
   }
 
@@ -95,13 +108,16 @@
       column-gap: var(--page-padding);
       justify-content: flex-start;
       flex-wrap: wrap;
+      // padding-left: 18px;
+
+      // justify-content: center;
     }
   }
 
   .linkBtn {
     width: 100%;
 
-    @media (min-width: 1025px) {
+    @media (min-width: 767px) {
       width: unset;
     }
 
