--- a/src/components/Organism/QuestionCard/questionCard.module.scss
+++ b/src/components/Organism/QuestionCard/questionCard.module.scss
@@ -1,55 +1,60 @@
 .main {
-	@include main;
+  @include main;
 
-	.container {
-		@include flex-column(var(--gap-lg));
+  label {
+    font-size: var(--fs-lg);
+    padding-bottom: 12px;
+  }
 
-		@media (min-width: 1025px) {
-			flex-direction: row;
-			column-gap: var(--page-padding);
-			align-items: start;
-			min-height: 600px;
+  .container {
+    @include flex-column(var(--gap-lg));
 
-			& > div {
-				width: 50%;
-			}
-		}
+    @media (min-width: 1025px) {
+      flex-direction: row;
+      column-gap: var(--page-padding);
+      align-items: start;
+      min-height: 600px;
 
-		.header {
-			@include header;
-		}
+      & > div {
+        width: 50%;
+      }
+    }
 
-		.progress {
-			@include flex-column(var(--gap-sm));
-			h3 {
-				color: var(--light);
-				font-size: var(--fs-md);
-			}
-		}
+    .header {
+      @include header;
+    }
 
-		& > div {
-			@include flex-column(var(--gap-lg));
-			flex-grow: 1;
+    .progress {
+      @include flex-column(var(--gap-sm));
+      h3 {
+        color: var(--light);
+        font-size: var(--fs-lg);
+      }
+    }
 
-			form {
-				flex-grow: 1;
-				@include form;
-			}
-		}
+    & > div {
+      @include flex-column(var(--gap-lg));
+      flex-grow: 1;
 
-		mark.invalid {
-			background: var(--tertiary);
-			color: var(--white);
-			font-weight: var(--fw-regular);
-			padding: calc(var(--elements-padding) / 2) var(--elements-padding);
-			width: fit-content;
-			font-size: var(--fs-sm);
-		}
+      form {
+        flex-grow: 1;
+        @include form;
+      }
+    }
 
-		.buttons {
-			display: flex;
-			justify-content: flex-end;
-			gap: var(--gap-md);
-		}
-	}
+    mark.invalid {
+      background: var(--tertiary);
+      color: var(--white);
+      font-weight: var(--fw-regular);
+      padding: calc(var(--elements-padding) / 2) var(--elements-padding);
+      width: fit-content;
+      font-size: var(--fs-sm);
+    }
+
+    .buttons {
+      display: flex;
+      justify-content: flex-end;
+      gap: var(--gap-md);
+    }
+  }
 }
