--- a/src/pages/storic-profile/storic-profile.module.scss
+++ b/src/pages/storic-profile/storic-profile.module.scss
@@ -12,6 +12,7 @@
     padding: 0;
     @media (min-width: 1025px) {
       padding-top: 60px;
+      padding-bottom: 100px;
     }
 
     .recentTests {
