--- a/src/styles/default/_mixins.scss
+++ b/src/styles/default/_mixins.scss
@@ -180,6 +180,13 @@
     &:hover {
       box-shadow: inset 4px 4px 3px 0px rgba(0, 0, 0, 0.2);
     }
+
+    &:disabled {
+      background: gray; // Cambia lo sfondo quando è disabilitato
+      cursor: not-allowed; // Cambia il cursore
+      opacity: 0.4; // Riduci la visibilità
+      box-shadow: none; // Rimuovi ombre
+    }
   }
 
   &.ctaButton {
