style: update favicon and Hero img + some minor fixes

--- a/src/components/Atoms/ResultCard/ResultCard.module.scss
+++ b/src/components/Atoms/ResultCard/ResultCard.module.scss
@@ -1,34 +1,35 @@
 .resultCard {
-	@include base-element;
-	@include flex-column(var(--gap-md));
-	align-items: flex-start;
-	background-color: var(--elements-bg);
+  @include base-element;
+  @include flex-column(var(--gap-md));
+  align-items: flex-start;
+  background: none;
 
-	transition: transform 0.8s ease;
+  transition: transform 0.8s ease;
 
-	&.selectedResultCard {
-		transform: scale(1.05);
-		margin: var(--gap-lg) 0;
-		border: 4px solid var(--dark);
-	}
+  &.selectedResultCard {
+    transform: scale(1.05);
+    margin: var(--gap-lg) 0;
+    border: 4px solid var(--dark);
+  }
 
-	&.correct {
-		background-color: var(--correct-bg);
-	}
-	&.average {
-		background-color: var(--average-bg);
-	}
-	&.incorrect {
-		background-color: var(--incorrect-bg);
-	}
+  &.correct {
+    background-color: var(--correct-bg);
+  }
+  &.average {
+    background-color: var(--average-bg);
+    color: var(--dark);
+  }
+  &.incorrect {
+    background-color: var(--incorrect-bg);
+  }
 
-	.resultCardHeader {
-		width: 100%;
-		display: flex;
-		justify-content: space-between;
-	}
+  .resultCardHeader {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+  }
 
-	& > :last-child {
-		margin: 0 auto;
-	}
+  & > :last-child {
+    margin: 0 auto;
+  }
 }
