--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -45,10 +45,10 @@
   --elements-bg: rgba(211, 211, 211, 0.2);
   --cards-bg: linear-gradient(45deg, rgba(68, 75, 136, 1) 50%, rgba(82, 90, 163, 1) 78%, rgba(106, 113, 180, 1) 100%);
 
-  --correct-bg: rgb(174, 202, 191);
-  --average-bg: rgb(202, 204, 180);
-  --incorrect-bg: rgb(201, 177, 184);
-  --lightGrey: rgba(211, 211, 211, 0.4); //hr
+  --correct-bg: rgb(16, 152, 32, 0.3);
+  --average-bg: rgb(249, 220, 92, 0.7);
+  --incorrect-bg: rgb(192, 30, 97, 0.7);
+  --lightGrey: rgb(211, 211, 211); //hr
 
   // HOME
   --lighter: #f5f5f5; //home bg
