--- a/src/components/Molecules/NavBar/NavBar.module.scss
+++ b/src/components/Molecules/NavBar/NavBar.module.scss
@@ -29,7 +29,7 @@
       justify-content: space-between;
 
       h4 {
-        font-size: var(--fs-lg);
+        font-size: var(--fs-xl);
       }
 
       .menuList {
