--- a/src/styles/default/_mixins.scss
+++ b/src/styles/default/_mixins.scss
@@ -231,7 +231,7 @@
   @include flex-column(var(--gap-md));
 
   & > :last-child {
-    margin-top: var(--gap-lg);
+    margin-top: var(--gap-md);
   }
   @media (min-width: 767px) {
     margin-top: unset;
